---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: ????
  Features:
    - You can now disable the 'closed' chat. This is intended to combat the latency issues with it without entirely removing it.
  Commands:
    - Replicated /seed
  Bugfixes:
    - /w and /s now actually work
    - Whispering now can't crash if there's no recipient passed
    - Intentional ephemeral messages now actually replace system messages
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2024-07-26
  Bugfixes:
    - Research events are now sent to friendly forces
    - Disabling commands now actually works (theoretically)
    - The player tag is actually used when sending chats
    - Spectators don't send the event that is used to open chat, so they are now statically open
  Scripting:
    - Added a parameter to send_message to skip clearing the chat.
      This also makes the message actually make a sound when printed since it's not piggy-backing on the entire chat print which is silent by necessity
    - Can now handle colors that are arrays rather than objects
    - send_message can now take a table of parameters instead. Old method of parameters remains for compatibility
  Issues:
    - The direct-printing of not clearing the chat uses a hacked-together method of printing the messsage. Leading to times where it might print incorrectly because it doesn't do the pre-processing that is done for internal use.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2024-03-12
  Bugfixes:
    - Fixed CHARACTER always being the killer. Still might happen with edge cases
    - 0.3.0 migration now works. Will go back and fix old versions with broken migrations if requested
  Info:
    - Refactored most functional code to be in separate files
  Scripting: