@@ -5,6 +5,7 @@ Date: ????
     - You can now disable the 'closed' chat. This is intended to combat the latency issues with it without entirely removing it.
   Commands:
     - Replicated /seed
+    - Replicated /evolution
   Bugfixes:
     - /w and /s now actually work
     - Whispering now can't crash if there's no recipient passed
